<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Dispatch</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_manage_address">Manage My Addresses</string>
    

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--    onboard-->
    <string name="swipe_left_for_register">Swipe Left for Register</string>

    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Let\'s join us and \nBuild your relationship with others</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>

    <string name="re_type_password">Re-type Password</string>

    <string name="register">Register</string>
    <string name="login">Login</string>

    <!--    place order-->
    <string name="item_info">Description of this order e.g.my beer </string>
    <string name="from">Pick Up Location</string>
    <string name="to">Drop Off Location</string>
    <string name="weight">Weight in Kg</string>
    <string name="type">Item Category</string>
    <string name="pack">Package Type</string>
    <string name="window">Pick Up Time</string>

    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="address">Street Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="orderCountry">Country</string>
    <string name="zip">ZIP Code</string>

    <string name="showPrice_button">"Show Price"</string>

    <!--    recommend plans-->
    <string name="drone">Drone</string>
    <string name="robot">Robot </string>
    <string name="shippingMethod">Shipping Method</string>
    <string name="times"> x </string>
    <string name="confirmButton">Place Order </string>
    <string name="best">Recommended</string>
    <string name="cheap">Lowest Cost</string>
    <string name="fast">Fastest Shipping</string>
    <string name="station">Station:</string>
    <string name="fee">Fee:</string>
    <string name="duration">Duration:</string>

    <!--    Address Related-->
    <string name="myAddressesButton">Choose from recent addresses</string>
    <string name="confirmAddressButton">Confirm</string>
    <string name="editAdd">Edit</string>
    <string name="saveAdd">Save</string>
    <string name="createAdd">Create</string>
</resources>
