<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/fromLast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/lastName"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="199dp"
            tools:layout_editor_absoluteY="39dp" />

        <EditText
            android:id="@+id/fromFirst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/firstName"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="14dp"
            tools:layout_editor_absoluteY="44dp" />

    </LinearLayout>

    <EditText
        android:id="@+id/fromAdd1"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPostalAddress"
        tools:layout_editor_absoluteX="13dp"
        tools:layout_editor_absoluteY="131dp" />

    <EditText
        android:id="@+id/fromAdd2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPostalAddress"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="90dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/fromCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/city"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="199dp"
            tools:layout_editor_absoluteY="39dp" />

        <EditText
            android:id="@+id/fromZIP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/zip"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="14dp"
            tools:layout_editor_absoluteY="44dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/fromState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/state"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="199dp"
            tools:layout_editor_absoluteY="39dp" />

        <EditText
            android:id="@+id/fromCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/orderCountry"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="14dp"
            tools:layout_editor_absoluteY="44dp" />

    </LinearLayout>

</LinearLayout>


